src/test/deca/context/invalid/declMethod-doubleDeclaration.context
declMethod-doubleDeclaration.deca:7: